@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-09T08:23:01Z",
-  "count_outdated" : 138,
-  "uniques_outdated" : 94,
-  "count" : 228,
-  "uniques" : 139,
+  "timestamp" : "2022-05-10T01:14:14Z",
+  "count_outdated" : 146,
+  "uniques_outdated" : 99,
+  "count" : 235,
+  "uniques" : 143,
   "clones" : [
-    {
-      "timestamp": "2022-04-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 8 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 5 ]
-    },
     {
       "timestamp": "2022-04-30T00:00:00Z",
       "count": 12,
