@@ -1,12 +1,7 @@
 {
-  "count": 90,
+  "count": 89,
   "uniques": 19,
   "clones": [
-    {
-      "timestamp": "2022-04-25T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-04-30T00:00:00Z",
       "count": 12,
